drop down menu on tool session page is now fixed (doesn't scroll). fixed css to prevent horizontal overflow and stop double tapp to zoom on mobile devices.

--- a/static/css/bgt_app_styles.css
+++ b/static/css/bgt_app_styles.css
@@ -285,14 +285,17 @@ ul {
 
 #ToolSessionPageWrapper {
     display: grid;
-    grid-template-rows: 5vh 90vh;
+    grid-template-rows: 4vh 90vh;
+
 }
 
 .tool-session-page-header {
     display: flex;
+    justify-content: center;
+    position: fixed;
     background-color: #0072ff;
-    align-items: center;
-    justify-content: space-around;
+    height: 4vh;
+    width: 100vw;
 }
 
 #ToolSelectionMenu {
@@ -317,7 +320,7 @@ ul {
     width: 95%;
     color: #FFFFFF;
     font-size: 2rem;
-    padding: 1rem;
+    padding: .5rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0 3px 6px,
                 rgba(0, 0, 0, 0.23) 0 3px 6px;
 }
@@ -414,13 +417,18 @@ ul {
     flex-direction: column;
     align-items: center;
     width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
     background-color: silver;
 }
 
 .tool-body {
+    height: 100%;
+    margin-top:4vh;
     display: none;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .hp-tracker-box {
